# MonitRS

./: Cargo.toml  README.md  Usersredst.git-credentials-tempgithub
.github/workflows/: release.yml
crates/assets/: Cargo.toml
crates/macros/: Cargo.toml
crates/task-manager/: Cargo.toml
crates/task-manager/src/: app_details_tab.rs  main.rs  performance_tab.rs  processes_tab.rs  system_monitor.rs
crates/ui/: Cargo.toml
crates/ui/locales/: ui.yml
crates/ui/src/: color_picker.rs  dialog.rs  geometry.rs  icon.rs  lib.rs  popover.rs  progress.rs  root.rs  select.rs  sheet.rs  slider.rs
crates/ui/src/button/: button.rs  dropdown_button.rs
crates/ui/src/dock/: mod.rs  tab_panel.rs
crates/ui/src/input/: blink_cursor.rs  element.rs  input.rs  state.rs  text_wrapper.rs
crates/ui/src/input/popovers/: code_action_menu.rs  completion_menu.rs  context_menu.rs
crates/ui/src/list/: delegate.rs  list.rs
crates/ui/src/menu/: context_menu.rs  popup_menu.rs
crates/ui/src/setting/: page.rs  settings.rs
crates/ui/src/sidebar/: mod.rs
crates/ui/src/tab/: tab.rs  tab_bar.rs
crates/ui/src/table/: column.rs  delegate.rs  state.rs
crates/ui/src/text/: node.rs  state.rs
crates/ui/src/theme/: default-theme.json  mod.rs
crates/ui/src/time/: date_picker.rs
themes/: adventure.json  alduin.json  ayu.json  catppuccin.json  everforest.json  fahrenheit.json  flexoki.json  gruvbox.json  harper.json  hybrid.json  jellybeans.json  kibble.json  macos-classic.json  mellifluous.json  molokai.json  solarized.json  spaceduck.json  tokyonight.json  twilight.json
